# wgpu-rust-graphic-engine

./: Cargo.toml  README.md  texture_convert_command.md
assets/: tree.ktx2
src/: aliases.rs  buffers_layouts.rs  camera.rs  components.rs  consts.rs  core_state.rs  enums.rs  functions.rs  lib.rs  main.rs  managers.rs  modules.rs  shader.wgsl  shader_library.rs  shader_programs.rs  shapes.rs  state.rs  structures.rs  systems.rs  traits.rs  vertex.rs
src/components/: position_component.rs  size_component.rs  sprite.rs  sprite_component.rs  transform_2d.rs
src/enums/: bind_group_layout_name_enum.rs  bind_group_name_enum.rs  component_name_enum.rs  control_thread_request_enum.rs  ecs_thread_message_enums.rs  engine_event_enum.rs  errors.rs  event_enum.rs  event_enums.rs  events.rs  execute_thread_message_enum.rs  execute_thread_message_enums.rs  frame_phase_name_enum.rs  game_event_enum.rs  input_event_enum.rs  io_event_enum.rs  material_name_enum.rs  message_types.rs  messages.rs  phase_enum.rs  render_pipeline_name_enum.rs  sampler_name_enum.rs  scene_type_enum.rs  shader_module_name_enum.rs  signals.rs  task_enum.rs  task_name_enum.rs  task_priority_enum.rs  task_type_enum.rs  time_budget_type_enum.rs  time_cost_type_enum.rs  winit_event_enum.rs
src/functions/: bind_group_functions.rs
src/managers/: bind_group_layout_manager.rs  bind_group_manager.rs  component_manager.rs  ecs_manager.rs  entity_id_manager.rs  entity_manager.rs  render_pipeline_manager.rs  sampler_manager.rs  sprite_material_manager.rs  system_manager.rs  texture_atlas_manager.rs  (+1 more)
(+308 files in other folders)
