[package]
name = "wgpu_rust_graphic_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
wgpu = "27"
winit = "0.30"
env_logger = "0.11"
pollster = "0.4"
cgmath = "0.18"
ktx2 = "0.4"

[dependencies.bytemuck]
version = "1.24"
features = ["derive"]

[dependencies.image]
version = "0.25"
features = ["png", "jpeg"]
