[package]
name = "wgpu_rust_graphic_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
wgpu = "27"
winit = "0.30"
env_logger = "0.11"
pollster = "0.4"
glam = "0.30"
ktx2 = "0.4"
thiserror = "2.0"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.bytemuck]
version = "1.24"
features = ["derive"]
